[package]
name = "aael"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
const_format = "0.2.34"
crypto = "0.5.1"
kbs-types = "0.11.0"
log = "0.4.27"
scroll = { version = "0.12.0", default-features = false, features = ["derive", "std"], optional = true }
serde = "1.0.219"
sha2 = "0.10.9"
strum = "0.27.1"
tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", tag = "DCAP_1.22", optional = true }
tempfile = { version = "3.20.0", optional = true }
thiserror = "2.0.12"

[features]
tsm-report = ["tempfile"]
tdx-attester = ["scroll", "tsm-report", "tdx-attest-rs"]
