[package]
name = "aael"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.88"
base64.workspace = true
bitflags = { version = "2.8.0", features = ["serde"] }
byteorder.workspace = true
clap.workspace = true
const_format = "0.2.34"
crypto = { path = "./deps/crypto" }
eventlog-rs = { version = "0.1.5" }
hex = "0.4.3"
kbs-types = "0.11.0"
log = "0.4.27"
scroll = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
strum.workspace = true
tdx-attest-rs = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = "2.0.12"
tokio.workspace = true
env_logger.workspace = true

[workspace]
resolver = "2"
members = [
    "deps/crypto",
]

[workspace.dependencies]
aes = "0.8.3"
aes-gcm = "0.10.2"
anyhow = "1.0"
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.3.10", features = ["derive"] }
ctr = "0.9.2"
env_logger = "0.11"
kbs-types = "0.10.0"
openssl = "0.10"
rand = "0.8.5"
rsa = "0.9.8"
rstest = "0.17"
scroll = { version = "0.12.0", default-features = false, features = ["derive", "std"] }
serde = "1.0.219"
serde_json = "1.0"
sha2 = "0.10.9"
strum = { version = "0.26", features = ["derive"] }
tdx-attest-rs = { git = "https://github.com/billionairiam/SGXDataCenterAttestationPrimitives", branch = "extend_rtmr" }
tempfile = "3.14"
tokio = { version = "1.42", features = ["full"] }
zeroize = "1.5.7"

[features]
default = ["tdx-attester"]
tsm-report = ["tempfile"]
tdx-attester = ["scroll", "tsm-report", "tdx-attest-rs"]
scroll = ["dep:scroll"]
tempfile = ["dep:tempfile"]
